--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -5,7 +5,7 @@ body {
 /* Hero Section */
 
 #Hero-Section {
-  background-image: url("../img/bg-hero.jpg");
+  background-image: url("../img/bg.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: left;
@@ -34,6 +34,16 @@ body {
 
   .navbar-brand{
     width: 100px;
+    
   }
 
 }
+
+#imagenlogo{
+  width: 100px;
+  height: 100px;
+}
+
+
+
+
