--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -5,7 +5,7 @@ body {
 /* Hero Section */
 
 #Hero-Section {
-  background-image: url("../img/bg.jpg");
+  background-image: url("../img/bg6.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: left;
@@ -39,7 +39,7 @@ body {
 
 }
 
-#imagenlogo{
+#imagenlogo {
   width: 100px;
   height: 100px;
 }
